
  * lib/Lintian/Collect/Package.pm:
    + [NT] Share some string values in the file_info and in
      the (X_)index methods.  This reduces memory usage a bit.
  * lib/Lintian/Collect/Source.pm:
    + [NT] "binaries" and "binary_field" now only exposes data
      about entries in d/control with a valid package name.
    + [NT] Document that "binaries" return an unorderd list.
  * lib/Lintian/Path.pm:
    + [NT] Fix bug in the overloaded qr// operator.
  * lib/Lintian/ProcessablePool.pm:
    + [NT] Fix a bug that could cause .changes files to be
      silently skipped.  This only occured if a related package
      was passed on the command line before the .changes file.
      Thanks to Salvo Tomaselli for reporting the bug.
      (Closes: #714437)
  * lib/Lintian/Tags.pm:
    + [NT] Use croak instead of die when a check emits an
      unknown tag.  This gives the check writer a better chance
      of finding where the problem occured.
  * lib/Lintian/Util.pm:
    + [NT] Have parse_dpkg_control and visit_dpkg_control
      give a more detailed line number information about
      paragraphs.

  * reporting/harness:
    + [NT] Clear some variables before running Lintian in the
      hope it will reduce the memory pressure on "long runs".
    + [NT] Remove support for "$LINTIAN_GPG_CHECK" config
      variable.  Lintian no longer checks any signatures.


 -- Niels Thykier <niels@thykier.net>  Sat, 29 Jun 2013 21:11:09 +0200

lintian (2.5.14) unstable; urgency=low

  * Summary of tag changes:
    + Removed:
      - upstream-version-not-numeric

  * checks/*:
    + [NT] Rename all checks to include the extension ".pm".
      (Closes: #710405)
    + [JW] Fix typos in several files.
  * checks/binaries.pm:
    + [NT] Also check for the presence of "mcount" to detect
      whether a binary was compiled with profiling.
      (Closes: #712124)
    + [NT] Ignore "teH" when checking for spelling mistakes in
      ELF binaries.  Thanks to Ryan Kavanagh for the report.